# allmuxcpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  start-env.sh
include/allmux/: fuzzy.hpp  history.hpp  logger.hpp  model.hpp  parser.hpp  process.hpp  tmux.hpp  ui.hpp  util.hpp
scripts/: build-ubuntu22-release.sh
src/: fuzzy.cpp  history.cpp  logger.cpp  main.cpp  parser.cpp  process.cpp  tmux.cpp  ui.cpp  util.cpp
